--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-tab-view-viewpager-adapter": "^1.1.0"
   },
   "devDependencies": {
